<resources>
    <string name="app_name">Project</string>
    <string name="title">BMI Calculator</string>
    <string name="etWeight">0</string>
    <string name="btnDisplayAllBMI">Display All \nBMI Result</string>
    <string name="btnCalculate">Calculate</string>
    <string name="btnReturn">Return to \nMain Menu</string>
    <string name="tvHeightMeasuringUnit">cm</string>
    <string name="et_edit_person_height">Height</string>
    <string name="et_edit_person_weight">Weight</string>
    <string name="et_edit_person_age">Age</string>
    <string name="et_edit_person_name">Name</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_change_private_info">Update Private Info</string>
    <string name="menu_update_login">Change Password</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_home">Home\n</string>
    <string name="menu_update_info">Update Info</string>
</resources>