<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_update_info"
        android:name="com.example.project.ui.updateInfo.UpdateInfoFragment"
        android:label="@string/menu_update_info"
        tools:layout="@layout/fragment_update_info" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.project.ui.changePassword.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password" />
</navigation>