<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BMI">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/tvMeasuringUnitHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="20dp"
        android:text="@string/tvHeightMeasuringUnit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintStart_toEndOf="@+id/etHeight" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="Your BMI: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <RadioGroup
        android:id="@+id/rgSystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvBMI"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight">

        <RadioButton
            android:id="@+id/rbImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Imperial"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metric"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvBMIResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvBMI"
        app:layout_constraintTop_toTopOf="@+id/tvBMI" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:hint="0"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toTopOf="@+id/tvWeight" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:hint="@string/etWeight"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toTopOf="@+id/tvHeight" />

    <TextView
        android:id="@+id/tvWeightMeasuringUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="Kg"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/etWeight"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="Weight: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="Height: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <Button
        android:id="@+id/btnCalculate"
        style="@style/Button_Style"
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="#a4d4ae"
        android:text="@string/btnCalculate"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBmiClear"
        style="@style/Button_Style"
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="#a4d4ae"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCalculate"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReturn"
        style="@style/Button_Style"
        android:layout_width="130dp"
        android:layout_height="64dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="#a4d4ae"
        android:text="@string/btnReturn"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toEndOf="@+id/btnCalculate" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="386dp"
        android:layout_height="387dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/topbmi"
        tools:layout_editor_absoluteY="-21dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="389dp"
        android:layout_height="206dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottombmi" />


</androidx.constraintlayout.widget.ConstraintLayout>
